--- a/configure.in
+++ b/configure.in
@@ -2,7 +2,7 @@
 
 # initialization
 AC_PREREQ(2.57)
-AC_INIT([wxsvg], [1.0.10], [wx-svg-users@lists.sourceforge.net])
+AC_INIT([wxsvg], [1.1.0], [wx-svg-users@lists.sourceforge.net])
 AC_CONFIG_MACRO_DIR([m4])
 AM_INIT_AUTOMAKE(foreign)
 AM_MAINTAINER_MODE
@@ -15,7 +15,7 @@ AM_MAINTAINER_MODE
 # 4. If any interfaces have been added since the last public release, then increment age.
 # 5. If any interfaces have been removed since the last public release then set age to 0.
 
-LIBRARY_VERSION=0:4:0 # current:revision:age -> libwxsvg.so.(C-A).(A).(R)
+LIBRARY_VERSION=1:0:1 # current:revision:age -> libwxsvg.so.(C-A).(A).(R)
 AC_SUBST(LIBRARY_VERSION)
 
 # options
@@ -24,8 +24,8 @@ AC_ARG_ENABLE(debug,
  [  --enable-debug          Enable debugging information],
  USE_DEBUG="$enableval", USE_DEBUG="no")
 AC_ARG_ENABLE(render,
- [  --enable-render[=render]          Specify the render: libart (default), agg or cairo],
- [USE_RENDER=$enableval], [USE_RENDER=libart])
+ [  --enable-render[=render]          Specify the render: cairo (default), libart or agg],
+ [USE_RENDER=$enableval], [USE_RENDER=cairo])
 AC_ARG_ENABLE(ffmpeg,
  [  --enable-ffmpeg         Enable ffmpeg decoder support (default: enabled)],
  [enable_ffmpeg=$enableval],[enable_ffmpeg=yes])
@@ -55,6 +55,7 @@ AC_PROG_LIBTOOL
 AC_PROG_CC
 AC_PROG_CXX
 AC_PROG_CXXCPP
+PKG_PROG_PKG_CONFIG()
 
 # debug flags
 case "$USE_DEBUG" in
@@ -103,12 +104,10 @@ agg)
   ;;
 cairo)
   # check for cairo
-  AC_CHECK_LIB(cairo, main, [CAIRO_LIBS=-lcairo], [AC_MSG_ERROR([*** missing cairo library])])
-  AC_CHECK_HEADER([cairo/cairo.h], [], [AC_MSG_ERROR([*** missing cairo library])])
-  AC_SUBST(CAIRO_CFLAGS)
-  AC_SUBST(CAIRO_LIBS)
-  CXXFLAGS="$CXXFLAGS -DUSE_RENDER_CAIRO"
-  font_engine=freetype
+  PKG_CHECK_MODULES(CAIRO, cairo)
+  CXXFLAGS="$CXXFLAGS $CAIRO_CFLAGS -DUSE_RENDER_CAIRO"
+  LIBS="$LIBS $CAIRO_LIBS"
+  font_engine=pango
   ;;
 *)
   AC_MSG_ERROR([*** Unknown render "$USE_RENDER"])
@@ -119,7 +118,6 @@ esac
 case "$font_engine" in
 freetype)
   # check for pango and freetype library
-  PKG_PROG_PKG_CONFIG()
   PKG_CHECK_MODULES(PANGO, pangoft2)
   PKG_CHECK_MODULES(FONTCONFIG, fontconfig)
   AC_CHECK_PROG(FREETYPE_CONFIG, freetype-config, yes, no)
@@ -149,6 +147,11 @@ fontfreetype_agg)
 fontwin32tt_agg)
   LIBS="$LIBS -laggfontwin32tt"
   ;;
+pango)
+  PKG_CHECK_MODULES(PANGO, pango)
+  CXXFLAGS="$CXXFLAGS $PANGO_CFLAGS"
+  LIBS="$LIBS $PANGO_LIBS"
+  ;;
 *)
   ;;
 esac
@@ -175,8 +178,6 @@ AC_CHECK_HEADER([expat.h],[],[AC_MSG_ERROR([*** missing expat library])])
 AM_CONDITIONAL(USE_FFMPEG, [test x$enable_ffmpeg = xyes])
 if test x$enable_ffmpeg = xyes; then
   PKG_CHECK_MODULES(FFMPEG, [libavformat >= 50.0.0 libavcodec >= 51.0.0 libavutil >= 49.0.0 libswscale])
-  # check path for old ffmpeg
-  AC_CHECK_HEADERS([ffmpeg/avutil.h]) 
   CXXFLAGS="$CXXFLAGS -DUSE_FFMPEG $FFMPEG_CFLAGS"
   LIBS="$LIBS $FFMPEG_LIBS"
 fi
