--- a/configure.in
+++ b/configure.in
@@ -2,7 +2,7 @@
 
 # initialization
 AC_PREREQ(2.57)
-AC_INIT([wxsvg], [1.1.1], [wx-svg-users@lists.sourceforge.net])
+AC_INIT([wxsvg], [1.1.2], [wx-svg-users@lists.sourceforge.net])
 AC_CONFIG_MACRO_DIR([m4])
 AM_INIT_AUTOMAKE(foreign)
 AM_MAINTAINER_MODE
@@ -15,7 +15,7 @@ AM_MAINTAINER_MODE
 # 4. If any interfaces have been added since the last public release, then increment age.
 # 5. If any interfaces have been removed since the last public release then set age to 0.
 
-LIBRARY_VERSION=2:0:2 # current:revision:age -> libwxsvg.so.(C-A).(A).(R)
+LIBRARY_VERSION=2:1:2 # current:revision:age -> libwxsvg.so.(C-A).(A).(R)
 AC_SUBST(LIBRARY_VERSION)
 
 # options
@@ -51,11 +51,14 @@ prefix=$m_cv_prefix
 AC_LANG_CPLUSPLUS
 AC_PROG_INSTALL
 AC_PROG_LN_S
-AC_PROG_LIBTOOL
 AC_PROG_CC
 AC_PROG_CXX
 AC_PROG_CXXCPP
 PKG_PROG_PKG_CONFIG()
+
+# Check for libtool
+m4_pattern_allow([AC_PROG_LIBTOOL])
+AC_PROG_LIBTOOL
 
 # debug flags
 case "$USE_DEBUG" in
