--- a/configure.in
+++ b/configure.in
@@ -26,9 +26,9 @@ AC_ARG_ENABLE(debug,
 AC_ARG_ENABLE(render,
  [  --enable-render[=render]          Specify the render: cairo (default), libart or agg],
  [USE_RENDER=$enableval], [USE_RENDER=cairo])
-AC_ARG_ENABLE(ffmpeg,
- [  --enable-ffmpeg         Enable ffmpeg decoder support (default: enabled)],
- [enable_ffmpeg=$enableval],[enable_ffmpeg=yes])
+AC_ARG_ENABLE(libav,
+ [  --enable-libav         Enable libav decoder support (default: enabled)],
+ [enable_libav=$enableval],[enable_libav=yes])
 AC_ARG_WITH(datarootdir,
  [  --with-datarootdir=DIR  Use DIR as the data root [[PREFIX/share]]],
  [datarootdir="\${prefix}/$with_datarootdir"], [datarootdir='$(prefix)/share'])
@@ -161,7 +161,7 @@ esac
 AM_CONDITIONAL(USE_FREETYPE, [test "$font_engine" = "freetype"])
 
 # check wxWidgets >= 2.6.3
-AM_PATH_WXCONFIG(2.6.3, WXFOUND=1)
+WX_CONFIG_CHECK(2.6.3, WXFOUND=1)
 if test "$WXFOUND" != 1; then
     AC_MSG_ERROR([
         Please check that wx-config is in path, the directory
@@ -178,11 +178,11 @@ AC_CHECK_LIB([expat],[XML_ParserCreate],[],[AC_MSG_ERROR([*** missing expat libr
 AC_CHECK_HEADER([expat.h],[],[AC_MSG_ERROR([*** missing expat library])])
 
 # check ffmpg
-AM_CONDITIONAL(USE_FFMPEG, [test x$enable_ffmpeg = xyes])
-if test x$enable_ffmpeg = xyes; then
-  PKG_CHECK_MODULES(FFMPEG, [libavformat >= 50.0.0 libavcodec >= 51.0.0 libavutil >= 49.0.0 libswscale])
-  CXXFLAGS="$CXXFLAGS -DUSE_FFMPEG $FFMPEG_CFLAGS"
-  LIBS="$LIBS $FFMPEG_LIBS"
+AM_CONDITIONAL(USE_LIBAV, [test x$enable_libav = xyes])
+if test x$enable_libav = xyes; then
+  PKG_CHECK_MODULES(LIBAV, [libavformat >= 50.0.0 libavcodec >= 51.0.0 libavutil >= 49.0.0 libswscale])
+  CXXFLAGS="$CXXFLAGS -DUSE_LIBAV $LIBAV_CFLAGS"
+  LIBS="$LIBS $LIBAV_LIBS"
 fi
 
 # vars
