--- a/svgview/Makefile.am
+++ b/svgview/Makefile.am
@@ -2,7 +2,7 @@ bin_PROGRAMS = svgview
 svgview_SOURCES = svgview.cpp
 svgview_LDADD = ../src/libwxsvg.la
 
-INCLUDES = -I$(top_srcdir)/include
+AM_CPPFLAGS = -I$(top_srcdir)/include
 
 run: $(bin_PROGRAMS)
 	./$(bin_PROGRAMS)
