--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Eclipse project files & folders
+/.settings/
+/.project
+/.pydevproject
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
